# CppExercises

./: .gitignore  README.md
Practice_10/: CMakeLists.txt  main.cpp
Practice_11/11.1/: CMakeLists.txt  main.cpp
Practice_11/11.2/: CMakeLists.txt  main.cpp
Practice_11/11.3/: CMakeLists.txt  main.cpp
Practice_11/11.4/: CMakeLists.txt  main.cpp
Practice_12/12.1/: CMakeLists.txt  main.cpp
Practice_12/12.2/: CMakeLists.txt  main.cpp
Practice_12/12.3/: CMakeLists.txt  main.cpp
Practice_12/example/: main.cpp
Practice_13/13.1/: CMakeLists.txt  main.cpp
Practice_13/13.2/: CMakeLists.txt  main.cpp
Practice_13/13.3/: CMakeLists.txt  main.cpp
Practice_14/14.1/: CMakeLists.txt  main.cpp
Practice_14/14.2/: CMakeLists.txt  main.cpp
Practice_14/14.3/: CMakeLists.txt  main.cpp
Practice_14/14.4/: CMakeLists.txt  main.cpp
Practice_14/14.5/: main.cpp
Practice_14/14.6/: CMakeLists.txt  main.cpp
Practice_14/14.8/: CMakeLists.txt  main.cpp
Practice_15/15.1/: CMakeLists.txt  main.cpp
Practice_15/15.2/: CMakeLists.txt  main.cpp
Practice_15/15.3/: CMakeLists.txt  main.cpp
Practice_15/15.4/: CMakeLists.txt  main.cpp
Practice_16/16.1/: CMakeLists.txt  compare.cpp  compare.h  main.cpp
Practice_16/16.2/: CMakeLists.txt  main.cpp
Practice_16/16.3/: CMakeLists.txt  main.cpp
Practice_16/16.4/: CMakeLists.txt  main.cpp
Practice_16/16.5/: CMakeLists.txt  main.cpp
Practice_17/17.1/: CMakeLists.txt  main.cpp
Practice_17/17.2/: CMakeLists.txt  main.cpp
Practice_17/17.3/: CMakeLists.txt  main.cpp
Practice_18/18.1/: CMakeLists.txt  main.cpp
Practice_18/18.2/: CMakeLists.txt  main.cpp
Practice_18/18.3/: CMakeLists.txt  main.cpp
Practice_18/18.4/: CMakeLists.txt  main.cpp
Practice_19/19.1/: words.txt
Practice_19/19.2/: CMakeLists.txt  main.cpp  text.txt
Practice_19/19.3/: CMakeLists.txt  main.cpp
Practice_19/19.4/: CMakeLists.txt  main.cpp
Practice_19/19.5/: CMakeLists.txt  answers.txt  main.cpp  questions.txt
Practice_20/20.1/: CMakeLists.txt  main.cpp
Practice_20/20.2/: CMakeLists.txt  main.cpp
Practice_20/20.3/: CMakeLists.txt  main.cpp
Practice_20/20.4/: CMakeLists.txt  main.cpp
Practice_20/untitled/: main.cpp
Practice_21/21.1/: CMakeLists.txt  main.cpp
Practice_21/21.2/: CMakeLists.txt  main.cpp
Practice_21/21.3/: CMakeLists.txt  main.cpp
Practice_21/21.4/: CMakeLists.txt  main.cpp
Practice_21/untitled/: main.cpp
Practice_22/22.1/: CMakeLists.txt  main.cpp
Practice_22/22.2/: CMakeLists.txt  main.cpp
Practice_22/22.3/: CMakeLists.txt  main.cpp
Practice_23/23.1/: CMakeLists.txt  main.cpp
Practice_23/23.2/: CMakeLists.txt  main.cpp
Practice_24/24.1/: CMakeLists.txt  main.cpp
Practice_24/24.2/: CMakeLists.txt  main.cpp
Practice_24/24.3/: CMakeLists.txt  main.cpp
Practice_25/25.1/: CMakeLists.txt
Practice_25/25.2/: CMakeLists.txt
Practice_26/26.1/: CMakeLists.txt  main.cpp
Practice_26/26.2/: CMakeLists.txt  main.cpp
Practice_26/26.3/: CMakeLists.txt
Practice_27/27.1/: CMakeLists.txt  Tree.txt
Practice_27/27.1/src/: Branch.cpp  CMakeLists.txt  ElfesNames.cpp  LargeBranch.cpp  Tree.cpp  main.cpp
Practice_27/27.2/: CMakeLists.txt
Practice_27/27.2/src/: CMakeLists.txt  Circle.cpp  GeometricFigure.cpp  Rectangle.cpp  Square.cpp  Triangle.cpp  main.cpp
Practice_27/27.3/: CMakeLists.txt
Practice_27/27.3/src/: CMakeLists.txt  Head_of_the_company.cpp  Manager.cpp  Worker.cpp  main.cpp
Practice_28/28.1/: CMakeLists.txt
Practice_28/28.2/: CMakeLists.txt
Practice_28/28.3/: CMakeLists.txt  main.cpp
Practice_29/29.2/: CMakeLists.txt
Practice_29/example/: CMakeLists.txt
Practice_30/30_1/: CMakeLists.txt  main.cpp
Practice_30/30_2/: CMakeLists.txt  main.cpp
Practice_30/30_3/: CMakeLists.txt  main.cpp
Practice_31/31_1/: CMakeLists.txt
Practice_31/31_2/: CMakeLists.txt
Practice_33/33_boost/: CMakeLists.txt  main.cpp
Practice_36/: CMakeLists.txt  Circle.cpp  Circle.h  main.cpp
Practice_38/38_1/38_1/: CMakeLists.txt  imagebutton.cpp  imagebutton.h  main.cpp  res.qrc
Practice_38/Media/Media/: CMakeLists.txt  main.cpp
(+225 files in other folders)
